--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 body{
     margin: 0;
@@ -78,6 +79,7 @@ body{
     align-items:start;
     text-align: left;
     gap: 8%;
+    flex: 1;
 }
 .conteudo_titulo1{
     font-family: 'Inter', sans-serif;
