--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ body{
 .rodape_conteudo{
     color: black;
     font-family: 'Inter', sans-serif;
+    font-size: 0.8rem;
     font-weight: 500;
     text-align: center;
     margin: 6rem 0 0 0;
